# device_camera_kinect4azure

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/utql/Persistence/: Kinect4AzurePlayer.xml
doc/utql/Sensor/Kinect4Azure/: Kinect4Azure.xml
src/kinect4azure/: CMakeLists.txt  Kinect4AzureFrameGrabber.h  Kinect4AzureGrabber.cpp
src/kinect4azure_io/: CMakeLists.txt  K4A_Player.cpp
